--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -1,25 +1,10 @@
-%h1 Cursos
+%h1 
+  Cursos:
+  = @courses.count
 
-%table
-  %thead
-    %tr
-      %th Titulo
-      %th Descricao
-      %th User
-      %th
-      %th
-      %th
-
-  %tbody
-    - @courses.each do |course|
-      %tr
-        %td= course.titulo
-        %td= course.descricao
-        %td= course.user
-        %td= link_to 'Show', course
-        %td= link_to 'Edit', edit_course_path(course)
-        %td= link_to 'Destroy', course, method: :delete, data: { confirm: 'Are you sure?' }
-
+.card-columns
+  - @courses.each do |course|
+    = render 'courses/course', course: course
 %br
 
 = link_to 'New Course', new_course_path
