--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -1,12 +1,5 @@
-%p#notice= notice
-
+= link_to 'Courses', courses_path
+\/
+= link_to @course.titulo, course_path(@course)
 %p
-  %b Titulo:
-  = @course.titulo
-%p
-  %b Descricao:
-  = @course.descricao
-
-= link_to 'Edit', edit_course_path(@course)
-\|
-= link_to 'Back', courses_path
+= render 'courses/course', course: @course
