--- a/app/views/courses/_course.html.haml
+++ b/app/views/courses/_course.html.haml
@@ -3,6 +3,14 @@
     = link_to course.titulo, course_path(course)
   .card-body
     = course.descricao
+
+  .card-footer
+  .row
+    .col-md-6
+      = course.linguagens
+    .col-md-6
+      .text-right
+        = course.nivel
   .card-footer
     = course.created_at.strftime('%d-%b-%Y')
     .row
