--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -7,4 +7,4 @@
     = render 'courses/course', course: course
 %br
 
-= link_to 'New Course', new_course_path
+= link_to 'Novo Curso', new_course_path
