--- a/app/views/static_pages/activity.html.haml
+++ b/app/views/static_pages/activity.html.haml
@@ -1,8 +1,7 @@
 %h3
   .text-center
-    Activity
-    .badge.badge-info
-      = @activities.count
+    = @activities.count
+    Atividades
 %p
 
 %ul.list-group
