--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,6 +1,6 @@
 body {
-  background-color: #fff;
-  color: #333;
+  background-color: #000;
+  color: #fff;
   margin: 33px; }
 
 body, p, ol, ul, td {
@@ -9,18 +9,18 @@ body, p, ol, ul, td {
   line-height: 18px; }
 
 pre {
-  background-color: #eee;
+  background-color: #1C1CF0;
   padding: 10px;
   font-size: 11px; }
 
 a {
-  color: #000; }
+  color: #fff; }
 
 a:visited {
-  color: #666; }
+  color:#fff; }
 
 a:hover {
-  color: #fff;
+  color: #1C1CF0;
   background-color: #000; }
 
 th {
@@ -46,7 +46,7 @@ div.actions {
   border: 2px solid red;
   padding: 7px 7px 0;
   margin-bottom: 20px;
-  background-color: #f0f0f0; }
+  background-color: #C0C0C0; }
 
 #error_explanation h2 {
   text-align: left;
@@ -55,7 +55,7 @@ div.actions {
   font-size: 12px;
   margin: -7px -7px 0;
   background-color: #c00;
-  color: #fff; }
+  color: #C0C0C0; }
 
 #error_explanation ul li {
   font-size: 12px;
